# CSBasics

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  python_notes.md
csbasics/: cli.py  datastructure.py  linkedlist.py
tests/: test_csbasics.py  test_interface_contracts.py
