[tool.poetry]
name = "csbasics"
version = "0.1.0"
description = "Basic CS algorithms in Python"
authors = ["Alexandre Gravier <al.gravier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
